# tgl

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  index.html  params.json
cmake/Modules/: FindGlog.cmake
docs/: Doxyfile.in
include/tgl/: TglTools.hpp  TglTypes.hpp  Trajectory.hpp  Waypoint.hpp  WaypointSet.hpp  Waypoints.hpp
src/: TglTools.cpp  TglTypes.cpp  Trajectory.cpp  Waypoint.cpp  WaypointSet.cpp  Waypoints.cpp
tests/: CMakeLists.txt  TglTestTools.hpp
tests/TglToolsTests/: CMakeLists.txt  main.cpp
tests/TrajectoryTests/: CMakeLists.txt  main.cpp
tests/WaypointSetTests/: CMakeLists.txt  main.cpp
tests/WaypointTests/: CMakeLists.txt  main.cpp
